TBD 2021 - 1.7
- Bugfix: RealTime remained checked when editing.
- Bugfix: Some Hamlib parameters were not properly stored.
- Improvement: Current UI data is saved before going to edit a QSO and restore after editing.
- Bugfix: Coredump when no entity (Closes #302)
- Bugfix: Colors are now properly defined. (Closes #275) (Closes #40)
- Bugfix: Station callsign is read from the settings. (Closes #307)
- Bugfix: The right setup dialog tab is open on first start. (Closes #311)
- Improvement: DarkMode added. (TNX EA5WA)
- Improvement: DXCC & WAZ management optimization.
- UI: The Setup menu has been moved to Settings into the File menu.

June 2021 - 1.6
- Optimization: Isolated the QSO tab to an independent widget.
- Bugfix: When starting KLog for the first time, it crashed.
- Bugfix: Hamlib was not properly started on KLog start (closes #126) (TNX G4MKT)
- Bugfix: SAT_MODE was being added to non SAT QSOs.
- Bugfix: DXCC status was not being properly updated.
- Improvement: Added user selectable ADIF fields in the Other and My Data tabs. (Closes #4)
- Improvement: Enhanced how the UDP server is started on KLog start.
- Improvement: Added some basic SQL Injection protection to the UI. (Closes #95)
- Improvement: UI data is saved before entering the Setup and restored after setup is done. (Closes #188)
- Improvement: Only one instance of KLog is allowed to run simultaneously. (Closes #250) (TNX foldynl)
- Commented some Flawfinder false positives.
- Translations: Catalan (TNX Txema), Czech (TNX OK1MLG), Italian (TNX IU5HIU) & Spanish (EA4K).

May 2021 - 1.5.3
- Bugfix: Fixes the DataBase update process to add the Q65 mode.
- Bugfix: Unexpected Setup dialog behavior. (Closes issue #178) (TNX foldynl)
- Bugfix: Time is not in UTC when "Log in real time" is uncheck. (Closes issue #179) (TNX foldynl)
- Bugfix: Missing translation in SoftwareUpdateDialog. (Closes issue #180) (TNX foldynl)
- Bugfix: Inconsistency text in Tip#2. (Closes issue #182) (TNX foldynl)