@@ -304,8 +304,10 @@ public:
     bool showInvalidCallMessage(const QString &_call);
 
     QList<QSO*> getSatGridStats(int _log=-1);
-    QList<QSO*> getSatDXCCStats(int _log=-1);
 
+    QList<QSO*> getGridStats(int _log=-1);
+    QList<QSO*> getSatDXCCStats(int _log=-1);
+    int getGridsInBand(const QString _band, bool confirmedOnly, QString _mode = "ALL", int _log=-1);
     //bool queryPrepare(const QString &_query);
     //bool queryBind(const QString &_field, const QString &value);
     //bool queryExec();
